[package]
name = "pca10059-bootloaded"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
nrf52840-hal = { version = "0.10.0", features = ["rt"] }
cortex-m-rt = "0.6.12"

# setting dev to same as release until theres a way to have
# vscode run use release mode. Almost nobody has a debugger
# hooked up anyway, but if you'll need to change this
[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false
